Fix font weight and alignment

--- a/src/assets/styles/About.css
+++ b/src/assets/styles/About.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .left-half > h1 {
@@ -33,6 +33,7 @@
 .contact-info > a {
   font-size: 1.2rem;
   font-family: 'Poiret One', 'cursive';
+  font-weight: bold;
   margin: 0 0 0.75rem 0;
   padding-top: 20px;
   text-decoration: none;
@@ -41,12 +42,18 @@
   color: #eee;
 }
 
+.contact-info > a:hover {
+  cursor: pointer;
+  color: #445561;
+}
+
 .contact-info > p {
   font-family: 'Poiret One', 'cursive';
   font-size: 20px;
-  font-weight: 500;
+  font-weight: bold;
   line-height: 22px;
-  text-align: justify;
+  letter-spacing: 0.1em;
+  text-align: left;
   color: #eee;
 }
 
@@ -70,8 +77,8 @@
   font-size: 20px;
   font-weight: bold;
   line-height: 22px;
-  text-align: justify;
-  text-justify: inter-word;
+  text-align: left;
+  letter-spacing: 0.1em;
   color: #eee;
 }
 
@@ -102,5 +109,8 @@
   }
   picture > img {
     width: 50%;
+  }
+  div.contact-info {
+    padding-bottom: 50px;
   }
 }
